# nokia-rag-finetuning

./: .env.example  .gitignore  Dockerfile  README.md  config.py  docker-compose-ollama-gpu.yaml  docker-compose-ollama.yaml  docker-compose.yaml  main.py  preprocess.py  pyproject.toml  start.sh  train.py  utils.py
api/: dtos.py  serving.py
dataset_builders/question-answering/: data.json  question-answering.py
