[project]
name = "nokia-guide-rag-finetuning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Alfin Surya", email = "alfins132@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "langchain-community==0.3.26",
    "langchain-core==0.3.66",
    "InstructorEmbedding==1.0.1",
    "langchain-chroma>=0.1.2",
    "langchain-openai==0.3.25",
    "langchain-ollama==0.3.3",
    "uvicorn==0.34.3",
    "transformers==4.41.0",
    "accelerate==1.8.1",
    "peft==0.13.0",
    "datasets==2.14.7",
    "docling==2.11.0",
    "sentencepiece==0.2.0",
    "evaluate==0.4.4",
    "fastapi==0.111.0",
    "scikit-learn==1.7.0",
    "pypdf==5.9.0",
    "sentence-transformers==5.0.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.setuptools]
py-modules = []
